# bili_proj

./: pyproject.toml
bili_proj/: get_list_pandas.py  main.py  resource.py
bili_proj/utils/: downloads.py
resources/: download_items_pandas.yml
