[tool.poetry]
name = "bili-proj"
version = "0.1.0"
description = ""
authors = ["lokcoffee <fernandoshui@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
logging = "^0.4.9.6"
lxml = "^5.3.0"
tqdm = "^4.67.0"
bs4 = "^0.0.2"
ffmpeg = "^1.4"
moviepy = "^1.0.3"
pyyaml = "^6.0.2"


[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "http://mirrors.aliyun.com/pypi/simple/"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
